tests/parsing/reinstantiation_in_inst/stderr.golden
error: reinstantiation of 's', first instantiation line 2 column 2
bus.fbd +3:2
   |
 3 | 	s static
   | 	^
